@@ -1,3 +1,7 @@
+2005-03-24 14:58  antirez
+
+	* ChangeLog, jim.c, test.tcl: [range] command + tests
+
 2005-03-24 12:00  antirez
 
 	* ChangeLog, Makefile, TODO, jim-sdl.c: A simple SDL extension for
